Test with `message.timestamp.type=CreateTime`
Signed-off-by: Michael Edgar <medgar@redhat.com>